2006-08-20  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Do not download 0 sized objects.

	* ptp.{c,h}: Merged libmtp patch "download to fd"
	  to keep in sync with them.

2006-08-10  Marcus Meissner  <marcus@jet.franken.de>
	
	* Added alternate iRiver H10 id, reported by Scott Call.
	* Added SanDisk sansa m240, Samsung YP-U2J, Archos 104

2006-08-07  Hubert Figuiere  <hub@figuiere.net>

	* library.c: Added Canon SD430

2006-07-22  Hubert Figuiere  <hub@figuiere.net>

	* library.c: Added Kodak P850

2006-07-08  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Hue Adjustment is an Enumeration on Nikon P3.

2006-07-08  Nicolas Boichat  <nicolas@boichat.ch>

	* config.c: Fixed bug in generic handler, when widgets
	  could be added twice.

2006-07-07  Nicolas Boichat  <nicolas@boichat.ch>

	* library.c,ptp.c,ptp.h,ptpip.c:
	  Added configuration upload of WIFI profiles
	  for the Nikon P2.

	* ptpip.c: Generate a random GUID if not set yet
	  and store it in the gphoto settings.

	* PTPIP.TXT: Documented profile layout.

2006-07-02  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Enhanced duplication logic to
	  work for the cases we encounter on MTP devices.

	* ptp-bugs.h, library.c: Mark up MTP devices
	  and classify them as Audio Devices. (For later
	  use by packaging scripts.)

	* library.c: Generic autodetection of MTP devices
	  by bypass hack with USB class.

2006-06-26  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Kodak Z650.


2006-06-24  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added AVPlaylist download (upload to come).

2006-06-24  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c, config.c, ptp-private.h, Makefile.am:
	
	  Split out configuration handling into new file config.c

2006-06-16  Hubert Figuiere  <hub@figuiere.net>

	* library.c: 30D has DCIM ROOT bug

2006-06-13  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.{ch}: Updated MTP defines from libmtp.
